# dzerver

./: CHANGELOG.md  README.md  cabal.project  dzerver.cabal
app/: Main.hs
lib/: Dzerver.hs
lib/Dzerver/Modules/: DB.hs  GPS.hs  Map.hs
test/: Spec.hs
test/Test/Modules/: GPS.hs
