cabal-version:      2.4
name:               dzerver
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Norbert Dzikowski
maintainer:         norbert@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable dzerver
    ghc-options:        -Wall
    main-is:            Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.3.0
                        , dzerver-lib
                        , aeson
                        , warp
                        , wai
                        , http-types
                        , bytestring
                        , yesod
    hs-source-dirs:     app
    default-language:   Haskell2010

library dzerver-lib
    ghc-options:        -Wall
    exposed-modules:    Dzerver.Modules.Map
                        , Dzerver.Modules.GPS
    build-depends:      base ^>=4.14.3.0
                        , aeson
                        , bytestring
                        , freer-simple
    hs-source-dirs:     lib
    default-language:   Haskell2010

test-suite dzerver-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    ghc-options:        -threaded
                        -rtsopts
                        -with-rtsopts=-N
                        -Wall
                        -Wno-orphans
    default-language:   Haskell2010
    other-modules:      Test.Modules.GPS
    build-depends:      base ^>=4.14.3.0
                        , dzerver-lib
                        , aeson
                        , QuickCheck
                        , ieee754
                        , tasty
                        , tasty-quickcheck
